chore: add Sentry and structlog to backend

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ BACKEND_CORS_ORIGINS=["https://pitline-corner-frontend.vercel.app","http://local
 SERVER_HOST=https://pitline-corner-backend.onrender.com
 PROJECT_NAME=Pitline Corner
 VERSION=1.0.0
+
+# Monitoring
+SENTRY_DSN=https://2370f1fec991a55c32bf1ae3d3102608@o4510722664562688.ingest.de.sentry.io/4510722673344592
+SENTRY_ENVIRONMENT=production
