--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,10 +48,10 @@ extend-exclude = '''
 [tool.isort]
 profile = "black"
 multi_line_output = 3
-include_trailing_comma = True
+include_trailing_comma = true
 force_grid_wrap = 0
-use_parentheses = True
-ensure_newline_before_comments = True
+use_parentheses = true
+ensure_newline_before_comments = true
 line_length = 88
 
 [tool.flake8]
