--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ redis>=4.5.0
 python-multipart>=0.0.6
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
+email-validator>=2.0.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 pytest>=7.4.0
