--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.100.0
 uvicorn[standard]>=0.23.0
 sqlalchemy>=2.0.0
 asyncpg>=0.28.0
+aiosqlite>=0.19.0
 alembic>=1.11.0
 redis>=4.5.0
 python-multipart>=0.0.6
