fix(ci): add timeouts and fix database configuration
- Add pytest-timeout dependency with 30s timeout per test
- Add 10-minute timeout for CI job to prevent infinite loops
- Fix test database configuration to use PostgreSQL instead of SQLite
- Update test_auth.py to respect DATABASE_URL environment variable
- Add explicit timeout command for pytest in CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q --strict-markers"
+addopts = "-ra -q --strict-markers --timeout=30"
 testpaths = [
     "tests",
 ]
