--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     strategy:
       matrix:
@@ -71,7 +72,7 @@ jobs:
         REDIS_URL: redis://localhost:6379
         SECRET_KEY: test-secret-key-for-ci
       run: |
-        pytest --cov=app --cov-report=xml
+        timeout 300 pytest --cov=app --cov-report=xml || exit 1
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
