--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-jose[cryptography]>=3.3.0
 bcrypt>=4.0.0
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
+pytest-timeout>=2.1.0
 httpx>=0.24.0
 black>=23.7.0
 isort>=5.12.0
